# ot-harjoitustyo

./: .coverage  .gitignore  README.md  pyproject.toml  tasks.py  test.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  selvitys_kielimallien_kaytosta.md  testausdokumentti.md  tyotunnit.md  vaatimusmaarittely.md
laskarit/: tyotunnit.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: index.html
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl_sekvenssikaavio.md  hsl_sequence_chart.md  luokkakaavio.md  machine_sequence_chart.md  monopoli_luokkakaavio.md  sekvenssikaavio.md
src/: UI.py  app.py  event_handler.py  game_loop.py  golden.py  image_loader.py  index.py  main.py  particles.py  repository.py  savefile.py  text.py  ui.py  upgrade.py  upgrades.py
src/tests/: UI_test.py  app_test.py  event_handler_test.py  game_loop_test.py  game_test.py  golden_test.py  image_loader_test.py  index_test.py  particles_test.py  repository_test.py  ui_test.py
